--- a/src/main/resources/webapp/css/pick.css
+++ b/src/main/resources/webapp/css/pick.css
@@ -79,12 +79,12 @@
     margin-left: 60px;
 }
 .td1 .td1-1 .mask1-1{
-    position: absolute;
+    position: relative;
     top:0;
     background: rgba(176, 196, 222, 0.4);
     width: 250px;
     height: 373px;
-    display: none;
+    /*display: none;*/
     cursor: hand;
     border-radius: 20px;
 }
