--- a/src/main/resources/webapp/css/pick.css
+++ b/src/main/resources/webapp/css/pick.css
@@ -1,3 +1,5 @@
+.fa-video-camera{position:absolute;margin: 0 10px 0 180px;opacity:.8;text-shadow:1px 1px 3px #aaa}
+
 .box{
     width: 100%;
     height: 100%;
