--- a/src/main/resources/webapp/css/third.css
+++ b/src/main/resources/webapp/css/third.css
@@ -30,7 +30,6 @@
     background-color: #fff;
 }
 .h{
-    margin-bottom: 47px;
     margin-top: 50px;
     font-size: 24px;
     color: #ff4949;
@@ -59,7 +58,7 @@ p{
 }
 .login-input input{
     box-sizing: border-box;
-    width: 100%;
+    width: 80%;
     padding: 15px;
     font-size: 16px;
     border: 1px solid #c4cdd6;
@@ -72,7 +71,7 @@ p{
     padding: 15px 0;
     font-size: 18px;
     line-height: 20px;
-    width: 100%;
+    width: 150px;
     border-width: 0;
     background-color: #ff4949;
     color: #fff;
